Changed color palette

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#3F51B5</color>
-	<color name="colorPrimaryDark">#303F9F</color>
-	<color name="colorAccent">#FF4081</color>
+	<color name="colorPrimary">#CDDC39</color>
+	<color name="colorPrimaryDark">#AFB42B</color>
+	<color name="colorPrimaryLight">#F0F4C3</color>
+	<color name="colorAccent">#03A9F4</color>
+	<color name="colorPrimaryText">#212121</color>
+	<color name="colorSecondaryText">#757575</color>
+	<color name="colorDivider">#BDBDBD</color>
+	<color name="colorIconDark">#212121</color>
 </resources>
