--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,33 +3,12 @@
 		android:id="@+id/drawer_layout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:app="http://schemas.android.com/apk/res-auto">
+		xmlns:android="http://schemas.android.com/apk/res/android">
 	<!-- The main content view -->
-	<android.support.design.widget.CoordinatorLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			>
-
-		<android.support.design.widget.AppBarLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				>
-
-			<android.support.v7.widget.Toolbar
-					android:id="@+id/toolbar"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					app:theme="@style/ToolbarTheme"
-					app:title="Notes"
-					app:titleTextAppearance="@style/Toolbar.TitleText"
-					/>
-		</android.support.design.widget.AppBarLayout>
-
-	</android.support.design.widget.CoordinatorLayout>
+	<include layout="@layout/activity_home_content"/>
 	<!-- The navigation drawer -->
 	<android.support.design.widget.NavigationView
-			android:id="@+id/nav_view"
+			android:id="@+id/navigation_view"
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
 			android:layout_gravity="start"
