--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#CDDC39</color>
-	<color name="colorPrimaryDark">#AFB42B</color>
-	<color name="colorPrimaryLight">#F0F4C3</color>
-	<color name="colorAccent">#03A9F4</color>
-	<color name="colorPrimaryText">#212121</color>
-	<color name="colorSecondaryText">#757575</color>
-	<color name="colorDivider">#BDBDBD</color>
-	<color name="colorIconDark">#212121</color>
+	<color name="primary">#9C27B0</color>
+	<color name="primaryDark">#7B1FA2</color>
+	<color name="primaryLight">#E1BEE7</color>
+	<color name="accent">#FF5722</color>
+	<color name="primaryText">#212121</color>
+	<color name="secondaryText">#757575</color>
+	<color name="divider">#BDBDBD</color>
+	<color name="iconAndText">#FFFFFF</color>
 </resources>
