--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,20 +2,21 @@
 
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-		<item name="colorPrimary">@color/colorPrimary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorAccent">@color/colorAccent</item>
+		<item name="colorPrimary">@color/primary</item>
+		<item name="colorPrimaryDark">@color/primaryDark</item>
+		<item name="colorAccent">@color/accent</item>
 	</style>
 
 	<style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
-		<item name="android:textColorPrimary">@color/colorPrimaryText</item>
-		<item name="actionMenuTextColor">@color/colorSecondaryText</item>
-		<item name="colorAccent">@color/colorAccent</item>
+		<item name="android:textColorPrimary">@color/primaryText</item>
+		<item name="actionMenuTextColor">@color/secondaryText</item>
+		<item name="colorAccent">@color/accent</item>
 		<item name="selectableItemBackground">?android:selectableItemBackground</item>
 		<item name="selectableItemBackgroundBorderless">?android:selectableItemBackground</item>
 	</style>
 
 	<style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
 		<item name="android:textSize">@dimen/h1</item>
+		<item name="android:textColor">@color/iconAndText</item>
 	</style>
 </resources>
