--- a/app/src/main/res/layout/activity_home_content.xml
+++ b/app/src/main/res/layout/activity_home_content.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.design.widget.CoordinatorLayout
-		xmlns:app="http://schemas.android.com/apk/res-auto"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:showIn="@layout/activity_home">
+		tools:showIn="@layout/activity_home"
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools">
 
 	<android.support.design.widget.AppBarLayout
 			android:layout_width="match_parent"
@@ -17,11 +17,19 @@
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				app:layout_scrollFlags="scroll|enterAlways"
 				app:theme="@style/ToolbarTheme"
 				app:title="Notes"
 				app:titleTextAppearance="@style/Toolbar.TitleText"
 				/>
 	</android.support.design.widget.AppBarLayout>
+
+	<android.support.v7.widget.RecyclerView
+			android:id="@+id/recycler_view"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior"
+			/>
 
 </android.support.design.widget.CoordinatorLayout>
 	
