--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
 		<item name="colorPrimary">@color/primary</item>
 		<item name="colorPrimaryDark">@color/primaryDark</item>
 		<item name="colorAccent">@color/accent</item>
+		<item name="android:windowBackground">@color/activityBackground</item>
 	</style>
 
 	<style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
@@ -18,5 +19,14 @@
 	<style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
 		<item name="android:textSize">@dimen/h1</item>
 		<item name="android:textColor">@color/iconAndText</item>
+	</style>
+
+	<style name="DialogTheme"  parent="Theme.AppCompat.Light.Dialog.Alert">
+		<!-- Used for the buttons -->
+		<item name="colorAccent">@color/accent</item>
+		<!-- Used for the title and text -->
+		<item name="android:textColorPrimary">@color/primaryText</item>
+		<!-- Used for the background -->
+		<item name="android:background">@color/md_grey_100</item>
 	</style>
 </resources>
