--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
 		<item name="colorPrimaryDark">@color/primaryDark</item>
 		<item name="colorAccent">@color/accent</item>
 		<item name="android:windowBackground">@color/activityBackground</item>
+		<item name="windowActionModeOverlay">true</item>
+	</style>
+
+	<style name="AppTheme.WhiteBackground">
+		<item name="android:windowBackground">@color/md_white_1000</item>
 	</style>
 
 	<style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
@@ -21,7 +26,7 @@
 		<item name="android:textColor">@color/iconAndText</item>
 	</style>
 
-	<style name="DialogTheme"  parent="Theme.AppCompat.Light.Dialog.Alert">
+	<style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
 		<!-- Used for the buttons -->
 		<item name="colorAccent">@color/accent</item>
 		<!-- Used for the title and text -->
