Implemented delete note feature

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -20,6 +20,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="@color/md_white_1000"
+				android:textColorPrimary="@color/md_blue_grey_700"
 				app:theme="@style/ToolbarTheme"
 				app:title=" "
 				app:titleTextAppearance="@style/Toolbar.TitleText"
