--- a/app/src/main/res/layout/view_note_card.xml
+++ b/app/src/main/res/layout/view_note_card.xml
@@ -14,6 +14,7 @@
 			android:layout_marginLeft="10dp"
 			android:layout_marginRight="10dp"
 			android:layout_marginTop="10dp"
+			android:ellipsize="end"
 			android:maxLines="2"
 			android:textColor="@color/md_grey_700"
 			android:textSize="@dimen/h2"
@@ -30,10 +31,10 @@
 			android:layout_marginLeft="10dp"
 			android:layout_marginRight="10dp"
 			android:layout_marginTop="10dp"
+			android:ellipsize="end"
 			android:maxLines="10"
 			android:textColor="@color/md_grey_600"
 			android:textSize="@dimen/h4"
 			tools:text="متن طولانی یادداشت"
 			/>
-
 </RelativeLayout>
