implemented empty view for HomeActivity when there are no notes

--- a/app/src/main/res/layout/activity_home_content.xml
+++ b/app/src/main/res/layout/activity_home_content.xml
@@ -45,4 +45,9 @@
 			app:rippleColor="@color/md_deep_orange_300"
 			/>
 
+	<include
+			layout="@layout/view_zero_notes"
+			/>
+
+
 </android.support.design.widget.CoordinatorLayout>
