--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -28,11 +28,56 @@
 	</android.support.design.widget.AppBarLayout>
 
 
-	<View
+	<FrameLayout
 			android:layout_width="match_parent"
-			android:layout_height="56dp"
+			android:layout_height="48dp"
 			android:layout_gravity="bottom"
-			android:background="@color/md_blue_grey_500"
-			/>
+			android:background="@color/md_grey_50"
+			>
+
+		<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:layout_gravity="top"
+				android:background="@color/md_blue_grey_100"
+				/>
+
+		<ImageButton
+				android:id="@+id/edit_drawing_button"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				android:layout_gravity="left"
+				android:background="?selectableItemBackgroundBorderless"
+				android:padding="12dp"
+				android:src="@drawable/ic_gesture_white_24dp"
+				android:tint="@color/md_blue_grey_600"
+				/>
+
+		<TextView
+				android:id="@+id/create_time_text"
+				android:layout_width="match_parent"
+				android:layout_height="48dp"
+				android:layout_marginLeft="48dp"
+				android:layout_marginRight="48dp"
+				android:background="@null"
+				android:gravity="center"
+				android:singleLine="true"
+				android:text="Created a minute ago"
+				android:textColor="@color/md_blue_grey_600"
+				android:textSize="@dimen/h5"
+				/>
+
+		<ImageButton
+				android:id="@+id/edit_folders_button"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				android:layout_gravity="right"
+				android:background="?selectableItemBackgroundBorderless"
+				android:padding="12dp"
+				android:src="@drawable/ic_folder_black_24dp"
+				android:tint="@color/md_blue_grey_600"
+				/>
+
+	</FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
