--- a/app/src/main/res/layout/view_note_card.xml
+++ b/app/src/main/res/layout/view_note_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
@@ -10,7 +10,6 @@
 			android:id="@+id/title"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_alignParentTop="true"
 			android:layout_marginLeft="10dp"
 			android:layout_marginRight="10dp"
 			android:layout_marginTop="10dp"
@@ -26,7 +25,6 @@
 			android:id="@+id/body"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/title"
 			android:layout_marginBottom="10dp"
 			android:layout_marginLeft="10dp"
 			android:layout_marginRight="10dp"
@@ -37,4 +35,4 @@
 			android:textSize="@dimen/h4"
 			tools:text="متن طولانی یادداشت"
 			/>
-</RelativeLayout>
+</LinearLayout>
