--- a/app/src/main/res/layout/view_note_card.xml
+++ b/app/src/main/res/layout/view_note_card.xml
@@ -6,6 +6,15 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools">
 
+	<ImageView
+			android:id="@+id/drawing_image"
+			android:layout_width="match_parent"
+			android:layout_height="200dp"
+			android:scaleType="fitCenter"
+			android:visibility="gone"
+	    android:layout_marginTop="5dp"
+			/>
+
 	<TextView
 			android:id="@+id/title"
 			android:layout_width="match_parent"
