show creation time of Note in NoteActivity

--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -17,7 +17,7 @@
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				app:layout_scrollFlags="scroll|enterAlways"
+				app:layout_scrollFlags="scroll|enterAlways|snap"
 				app:theme="@style/ToolbarTheme"
 				app:title="Notes"
 				app:titleTextAppearance="@style/Toolbar.TitleText"
