--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -77,7 +77,14 @@
 				android:src="@drawable/ic_folder_black_24dp"
 				android:tint="@color/md_blue_grey_600"
 				/>
-
 	</FrameLayout>
+
+	<ir.cafebazaar.notepad.views.RichEditWidgetView
+			android:id="@+id/rich_edit_widget"
+			android:layout_width="match_parent"
+			android:layout_height="50dp"
+			android:layout_gravity="bottom"
+			android:background="@drawable/background_rich_edit_widget"
+			/>
 
 </android.support.design.widget.CoordinatorLayout>
