--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
 		android:id="@+id/drawer_layout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -12,7 +12,7 @@
 			android:layout_height="match_parent"/>
 
 	<!-- The navigation drawer -->
-	<android.support.design.widget.NavigationView
+	<com.google.android.material.navigation.NavigationView
 			android:id="@+id/navigation_view"
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
@@ -20,4 +20,4 @@
 			android:fitsSystemWindows="true"
 			app:headerLayout="@layout/view_navigation_header"
 			/>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
