--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:showIn="@layout/activity_home"
@@ -9,13 +9,13 @@
 
 	<include layout="@layout/activity_note_scrolling_content"/>
 
-	<android.support.design.widget.AppBarLayout
+	<com.google.android.material.appbar.AppBarLayout
 			android:id="@+id/appBar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			>
 
-		<android.support.v7.widget.Toolbar
+		<androidx.appcompat.widget.Toolbar
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
 				app:title=" "
 				app:titleTextAppearance="@style/Toolbar.TitleText"
 				/>
-	</android.support.design.widget.AppBarLayout>
+	</com.google.android.material.appbar.AppBarLayout>
 
 
 	<FrameLayout
@@ -79,7 +79,7 @@
 				/>
 	</FrameLayout>
 
-	<ir.cafebazaar.notepad.views.RichEditWidgetView
+	<ir.cafebazaar.notepad.Views.RichEditWidgetView
 			android:id="@+id/rich_edit_widget"
 			android:layout_width="match_parent"
 			android:layout_height="50dp"
@@ -87,4 +87,4 @@
 			android:background="@drawable/background_rich_edit_widget"
 			/>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
