--- a/app/src/main/res/layout/view_rich_edit_action_button.xml
+++ b/app/src/main/res/layout/view_rich_edit_action_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.AppCompatImageButton
+<androidx.appcompat.widget.AppCompatImageButton
 		android:layout_width="48dp"
 		android:layout_height="48dp"
 		android:layout_marginLeft="3dp"
